# standard_repo

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  setup.cfg  setup_repo.sh
