[metadata]
name = custom_package_name
description = SHORT DESCRIPTION HERE
author = Eric Winter
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    custom_package_name
install_requires =
    REQUIRED_PACKAGES_HERE
    MORE_PACKAGES_HERE

python_requires = >=3.10
package_dir =
    =src
zip_safe = no
